Characters Cards Overflow Bug Fix

--- a/front-end/src/pages/Characters/CharactersGroup/CharactersGroupCharacterCards/CharactersGroupCharacterCard/CharactersGroupCharacterCard.css
+++ b/front-end/src/pages/Characters/CharactersGroup/CharactersGroupCharacterCards/CharactersGroupCharacterCard/CharactersGroupCharacterCard.css
@@ -189,6 +189,7 @@
 	height: 100%;
 	min-height: var(--characterCardHeight);
 	object-fit: cover;
+	overflow: visible;
 }
 
 .characters-group-character-card-background-alignment-top-left {
